// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`InventoryListItem should render with default props 1`] = `
<DocumentFragment>
  <div
    class="inventory_item"
    data-testid="inventory-item"
  >
    <div
      class="inventory_item_img"
    >
      <a
        aria-label="View details for Swag Item name"
        data-testid="item-1-img-link"
        href="#"
        id="item_1_img_link"
        role="button"
      >
        <img
          alt="Swag Item name"
          class="inventory_item_img"
          data-testid="inventory-item-swag-item-name-img"
        />
      </a>
    </div>
    <div
      class="inventory_item_description"
      data-testid="inventory-item-description"
    >
      <div
        class="inventory_item_label"
      >
        <a
          aria-label="View details for Swag Item name"
          data-testid="item-1-title-link"
          href="#"
          id="item_1_title_link"
          role="button"
        >
          <div
            class="inventory_item_name "
            data-testid="inventory-item-name"
          >
            Swag Item name
          </div>
        </a>
        <div
          class="inventory_item_desc"
          data-testid="inventory-item-desc"
        >
          Swag Item description
        </div>
      </div>
      <div
        class="pricebar"
      >
        <div
          class="inventory_item_price"
          data-testid="inventory-item-price"
        >
          $9.99
        </div>
        <button
          class="btn btn_primary btn_small btn_inventory "
          data-testid="add-to-cart-swag-item-name"
          id="add-to-cart-swag-item-name"
          name="add-to-cart-swag-item-name"
        >
          Add to cart
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InventoryListItem should render with text aligned right 1`] = `
<DocumentFragment>
  <div
    class="inventory_item"
    data-testid="inventory-item"
  >
    <div
      class="inventory_item_img"
    >
      <a
        aria-label="View details for Swag Item name"
        data-testid="item-1-img-link"
        href="#"
        id="item_1_img_link"
        role="button"
      >
        <img
          alt="Swag Item name"
          class="inventory_item_img"
          data-testid="inventory-item-swag-item-name-img"
        />
      </a>
    </div>
    <div
      class="inventory_item_description"
      data-testid="inventory-item-description"
    >
      <div
        class="inventory_item_label"
      >
        <a
          aria-label="View details for Swag Item name"
          data-testid="item-1-title-link"
          href="#"
          id="item_1_title_link"
          role="button"
        >
          <div
            class="inventory_item_name align_right"
            data-testid="inventory-item-name"
          >
            Swag Item name
          </div>
        </a>
        <div
          class="inventory_item_desc"
          data-testid="inventory-item-desc"
        >
          Swag Item description
        </div>
      </div>
      <div
        class="pricebar"
      >
        <div
          class="inventory_item_price"
          data-testid="inventory-item-price"
        >
          $9.99
        </div>
        <button
          class="btn btn_primary btn_small btn_inventory "
          data-testid="add-to-cart-swag-item-name"
          id="add-to-cart-swag-item-name"
          name="add-to-cart-swag-item-name"
        >
          Add to cart
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
